[gd_scene load_steps=44 format=2]

[ext_resource path="res://actors/environments/Rock.gd" type="Script" id=1]
[ext_resource path="res://addons/ECM/Entity.gd" type="Script" id=2]
[ext_resource path="res://addons/ECM/icons/Entity.png" type="Texture" id=3]
[ext_resource path="res://addons/ECM/Component.gd" type="Script" id=4]
[ext_resource path="res://addons/ECM/icons/Component.png" type="Texture" id=5]
[ext_resource path="res://assets/icon/star_empty.png" type="Texture" id=6]
[ext_resource path="res://assets/icon/star_empty00.png" type="Texture" id=7]
[ext_resource path="res://assets/icon/star_empty01.png" type="Texture" id=8]
[ext_resource path="res://assets/icon/star_empty02.png" type="Texture" id=9]
[ext_resource path="res://assets/icon/star_empty03.png" type="Texture" id=10]
[ext_resource path="res://assets/icon/star_empty04.png" type="Texture" id=11]
[ext_resource path="res://assets/icon/star_empty05.png" type="Texture" id=12]
[ext_resource path="res://assets/icon/star_empty06.png" type="Texture" id=13]
[ext_resource path="res://assets/icon/star_empty07.png" type="Texture" id=14]
[ext_resource path="res://assets/icon/star_empty08.png" type="Texture" id=15]
[ext_resource path="res://assets/icon/star_empty09.png" type="Texture" id=16]
[ext_resource path="res://assets/icon/star_empty10.png" type="Texture" id=17]
[ext_resource path="res://assets/icon/star_empty11.png" type="Texture" id=18]
[ext_resource path="res://assets/icon/star_full00.png" type="Texture" id=19]
[ext_resource path="res://assets/icon/star_full01.png" type="Texture" id=20]
[ext_resource path="res://assets/icon/star_full02.png" type="Texture" id=21]
[ext_resource path="res://assets/icon/star_full03.png" type="Texture" id=22]
[ext_resource path="res://assets/icon/star_full04.png" type="Texture" id=23]
[ext_resource path="res://assets/icon/star_full05.png" type="Texture" id=24]
[ext_resource path="res://assets/icon/star_full06.png" type="Texture" id=25]
[ext_resource path="res://assets/icon/star_full07.png" type="Texture" id=26]
[ext_resource path="res://assets/icon/star_full08.png" type="Texture" id=27]
[ext_resource path="res://assets/icon/star_full09.png" type="Texture" id=28]
[ext_resource path="res://assets/icon/star_full10.png" type="Texture" id=29]
[ext_resource path="res://assets/icon/star_full11.png" type="Texture" id=30]
[ext_resource path="res://assets/icon/star_full.png" type="Texture" id=31]
[ext_resource path="res://assets/sprites/environments/wall_tile.png" type="Texture" id=32]
[ext_resource path="res://assets/sprites/environments/diamond_trapped.png" type="Texture" id=33]
[ext_resource path="res://assets/fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=34]
[ext_resource path="res://assets/audio/gameplay/asteroids/zapsplat_multimedia_game_sound_tone_button_select_menu_sci_fi_003_40731.ogg" type="AudioStream" id=35]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 60.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": false,
"name": "outline",
"speed": 60.0
}, {
"frames": [ ExtResource( 31 ) ],
"loop": true,
"name": "full",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ) ],
"loop": true,
"name": "shine",
"speed": 60.0
} ]

[sub_resource type="CanvasItemMaterial" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 100.0

[sub_resource type="Animation" id=8]
resource_name = "Conquered"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.215686 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 35 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
resource_name = "Forming"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.215686 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "become_breakable"
} ]
}

[sub_resource type="DynamicFont" id=6]
size = 72
use_mipmaps = true
use_filter = true
font_data = ExtResource( 34 )

[sub_resource type="DynamicFont" id=7]
size = 52
font_data = ExtResource( 34 )

[node name="Rock" type="RigidBody2D" groups=[
"in_camera",
"rock",
"wait_to_start",
]]
collision_layer = 1024
collision_mask = 1053
mass = 512.0
physics_material_override = SubResource( 1 )
gravity_scale = 2.0
angular_velocity = 0.3
angular_damp = 0.0
script = ExtResource( 1 )

[node name="Entity" type="Node" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}

[node name="Trigger" type="Node" parent="Entity"]
script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}

[node name="Deadly" type="Node" parent="Entity"]
script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}

[node name="Star" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.752941 )
frames = SubResource( 2 )
animation = "shine"
frame = 30
playing = true

[node name="Diamond" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.454902 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 33 )

[node name="Polygon2D" type="Polygon2D" parent="."]

[node name="Line2D" type="Line2D" parent="."]
modulate = Color( 1.8, 1.8, 1.8, 1 )
material = SubResource( 3 )
width = 42.0
texture = ExtResource( 32 )

[node name="LightLine2D" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
width = 6.0
default_color = Color( 0.87451, 0, 1, 0.392157 )

[node name="LightLine2D2" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
width = 6.0
default_color = Color( 0.87451, 0, 1, 0.392157 )

[node name="LightLine2D3" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
width = 6.0
default_color = Color( 0.87451, 0, 1, 0.392157 )

[node name="LightLine2D4" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
width = 6.0
default_color = Color( 0.87451, 0, 1, 0.392157 )

[node name="LightLine2DE" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
width = 6.0
default_color = Color( 0.87451, 0, 1, 0.392157 )

[node name="LightLine2DE2" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
width = 6.0
default_color = Color( 0.87451, 0, 1, 0.392157 )

[node name="LightLine2DE3" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
width = 6.0
default_color = Color( 0.87451, 0, 1, 0.392157 )

[node name="LightLine2DE4" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
width = 6.0
default_color = Color( 0.87451, 0, 1, 0.392157 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Forming"
anims/Conquered = SubResource( 8 )
anims/Forming = SubResource( 5 )

[node name="SelfDestructTimer" type="Timer" parent="."]

[node name="NoRotate" type="Node2D" parent="."]

[node name="Countdown" type="Label" parent="NoRotate"]
margin_left = -30.0
margin_top = -44.0
margin_right = 30.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.827451, 0, 1, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Monogram" type="Node2D" parent="NoRotate"]

[node name="Label" type="Label" parent="NoRotate/Monogram"]
self_modulate = Color( 1, 1, 1, 0.196078 )
margin_left = -101.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
bus = "SFX"
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
